--- a/Day 1/day1.html
+++ b/Day 1/day1.html
@@ -6,7 +6,12 @@
 <body>
     <div id="container">
     <div id="gradient-container">
-        <h1>100</h1>
+        <h1 id='hundred'>
+        <p>1</p>    
+        <p>0</p>    
+        <p>0</p>    
+            
+        </h1>
         <h1>DAYS</h1>
         <h1>CSS CHALLENGE</h1>
     </div>
