More into a snippet(you need to study more css)

--- a/Day 1/day1.html
+++ b/Day 1/day1.html
@@ -4,16 +4,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="gradient-container">
-    <div id="container">
-        <h1 id='hundred'>
-        <p>1</p>    
-        <p>0</p>    
-        <p>0</p>      
-        </h1>
-        <h1>DAYS</h1>
-        <h1>CSS CHALLENGE</h1>
+    <div id="green">
+    <div class="gradient-container">
+    <div class="container">
+        <div id='hundred'>
+        <p class='um'>1</p>    
+        <p class='o'>O</p>    
+        <p class='o'>O</p>      
+        </div>
+        <div id="days">DAYS</div>
+        <div id='challenge'>CSS CHALLENGE</div>
     </div>
     </div>
+</div>
 </body>
 </html>
