--- a/Day 1/day1.html
+++ b/Day 1/day1.html
@@ -4,18 +4,19 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="green">
+    
     <div class="gradient-container">
     <div class="container">
         <div id='hundred'>
-        <p class='um'>1</p>    
-        <p class='o'>O</p>    
-        <p class='o'>O</p>      
+        <div class='one-one'></div>    
+        <div class='one-two'></div>    
+        <div class='zero-one'></div>      
+        <div class='zero-two'></div>      
         </div>
         <div id="days">DAYS</div>
         <div id='challenge'>CSS CHALLENGE</div>
     </div>
     </div>
-</div>
+    
 </body>
 </html>
